# univers-machine

./: .gitignore  Cargo.toml  README.md  claude.md
apps/univers-ark-developer/: .gitignore  (+9 more)
apps/univers-ark-developer/src-tauri/: Cargo.toml  tauri.conf.json
apps/univers-ark-developer/src-tauri/capabilities/: default.json
apps/univers-ark-developer/src-tauri/crates/univers-ark-russh/: Cargo.toml  README.md
apps/univers-ark-developer/src-tauri/crates/univers-ark-russh/examples/: sftp_test.rs  smoke.rs
apps/univers-ark-developer/src-tauri/crates/univers-ark-russh/src/: connection.rs  exec.rs  files.rs  forward.rs  lib.rs  pty.rs  sftp.rs  ssh_config.rs  types.rs  vnc_forward.rs
apps/univers-ark-developer/src-tauri/icons/: icon.icns
apps/univers-ark-developer/src-tauri/src/: activity.rs  app.rs  cleanup.rs  commands.rs  config.rs  connectivity.rs  constants.rs  dashboard.rs  files.rs  github.rs  lib.rs  main.rs  models.rs  proxy.rs  runtime.rs  scheduler.rs  secret_management.rs  service_registry.rs  settings.rs  shell.rs  terminal.rs  tunnel.rs
apps/univers-ark-developer/src-tauri/src/app/: lifecycle.rs  menu.rs  mod.rs
apps/univers-ark-developer/src-tauri/src/commands/: diagnostics.rs  github.rs  machine.rs  runtime.rs  secrets.rs  settings.rs
apps/univers-ark-developer/src-tauri/src/commands/machine/: actions.rs  bootstrap.rs  config.rs  import.rs  mod.rs
apps/univers-ark-developer/src-tauri/src/commands/runtime/: browser.rs  dashboard.rs  misc.rs  mod.rs  terminal.rs  tunnel.rs  vnc.rs
apps/univers-ark-developer/src-tauri/src/config/: discovery.rs  mod.rs  profiles.rs  ssh.rs
apps/univers-ark-developer/src-tauri/src/github/: cli.rs  local_repo.rs  mod.rs
apps/univers-ark-developer/src-tauri/src/infra/: mod.rs  russh.rs  sqlite.rs  ssh.rs  storage_paths.rs
apps/univers-ark-developer/src-tauri/src/machine/: actions.rs  application.rs  chain.rs  config_document.rs  connection.rs  discovery.rs  exec.rs  fs_store.rs  inventory.rs  mod.rs  profiles.rs  repository.rs  ssh.rs  store.rs  tests.rs  types.rs
apps/univers-ark-developer/src-tauri/src/machine/discovery/: mod.rs  projection.rs  sources.rs  ssh_users.rs
apps/univers-ark-developer/src-tauri/src/machine/discovery/projection/: inventory.rs  mod.rs  target.rs
apps/univers-ark-developer/src-tauri/src/machine/discovery/sources/: manual.rs  mod.rs  parse.rs
apps/univers-ark-developer/src-tauri/src/machine/discovery/ssh_users/: candidates.rs  host_probe.rs  mod.rs
apps/univers-ark-developer/src-tauri/src/machine/ssh/: build.rs  probe.rs
apps/univers-ark-developer/src-tauri/src/models/: dashboard.rs  diagnostics.rs  filesystem.rs  github.rs  inventory.rs  mod.rs  runtime.rs  secrets.rs  state.rs  workbench.rs
apps/univers-ark-developer/src-tauri/src/runtime/: activity.rs  browser.rs  connectivity.rs  dashboard.rs  diagnostics.rs  files.rs  mod.rs  scheduler.rs  terminal.rs
apps/univers-ark-developer/src-tauri/src/runtime/connectivity/: cycle.rs  monitor.rs  probe.rs  status.rs
apps/univers-ark-developer/src-tauri/src/runtime/dashboard/: loader.rs  mod.rs
apps/univers-ark-developer/src-tauri/src/runtime/dashboard/loader/: command.rs  mod.rs  payload.rs
apps/univers-ark-developer/src-tauri/src/runtime/tunnel/: cleanup.rs  forwarding.rs  mod.rs  proxy.rs  registry.rs  session.rs  status.rs  supervisor.rs
apps/univers-ark-developer/src-tauri/src/runtime/tunnel/forwarding/: mod.rs  targets.rs  vite.rs
apps/univers-ark-developer/src-tauri/src/runtime/tunnel/proxy/: http.rs  mod.rs
apps/univers-ark-developer/src-tauri/src/runtime/tunnel/session/: lifecycle.rs  mod.rs  probe.rs
apps/univers-ark-developer/src-tauri/src/runtime/tunnel/supervisor/: cycle.rs  mod.rs  reconcile.rs
apps/univers-ark-developer/src-tauri/src/secrets/: mobile.rs  mod.rs  repository.rs  service.rs  store.rs
apps/univers-ark-developer/src-tauri/src/secrets/repository/: helpers.rs  mod.rs  mutations.rs  queries.rs
apps/univers-ark-developer/src-tauri/src/services/: actions.rs  catalog.rs  health.rs  mod.rs  projection.rs  registry.rs  runtime.rs
apps/univers-ark-developer/src-tauri/src/services/health/: mod.rs  payload.rs  probe.rs
apps/univers-ark-developer/src-tauri/src/services/runtime/: hydration.rs  keys.rs  mod.rs  ports.rs
apps/univers-ark-developer/src-tauri/src/settings/: mod.rs
apps/univers-container-daemon/: Cargo.toml
apps/univers-container-daemon/src/: container.rs  daemon.rs  dashboard.rs  main.rs  self_daemon.rs  status.rs
apps/univers-container-daemon/src/application/: container_runtime.rs  daemon_service.rs  dashboard.rs  mod.rs
apps/univers-daemon-core/: Cargo.toml
apps/univers-daemon-core/src/: lib.rs  sysdetect.rs  system.rs
apps/univers-daemon-core/src/agent/: db.rs  mod.rs  state.rs
apps/univers-daemon-core/src/agents/: mod.rs
apps/univers-daemon-core/src/api/: response.rs  routes.rs
apps/univers-daemon-core/src/app/: mod.rs
apps/univers-daemon-core/src/application/: agent.rs  agent_session.rs  catalog.rs  installer.rs  mod.rs  workspace.rs
apps/univers-daemon-core/src/installer/: claude_code.rs  common.rs  mod.rs  nodejs.rs  opencode.rs  surrealdb.rs
apps/univers-daemon-core/src/tmux/: mod.rs  service.rs  spec.rs
apps/univers-machine-daemon/: Cargo.toml
apps/univers-machine-daemon/src/: daemon.rs  machine.rs  main.rs  status.rs
apps/univers-machine-daemon/src/application/: machine.rs
config/: README.md  servers.yaml.example  view-layout.yaml.example  vms.yaml.example
crates/univers-infra-sqlite/: Cargo.toml
crates/univers-infra-sqlite/src/: lib.rs  session_store.rs
crates/univers-infra-ssh/: Cargo.toml  README.md
crates/univers-infra-ssh/examples/: sftp_test.rs  smoke.rs
crates/univers-infra-ssh/src/: connection.rs  exec.rs  files.rs  pty.rs  sftp.rs  ssh_config.rs  types.rs
docs/: workbench-naming-spec.md
scripts/: build-ark-daemon-assets.sh  build-ark-deb.sh  cargo-x86_64-unknown-linux-gnu.sh  fix-tmux-agents.sh  setup-x86_64-cross-toolchain.sh  x86_64-linux-gnu-ar  x86_64-linux-gnu-gcc  x86_64-linux-gnu-strip  x86_64-linux-gnu-tool.sh
(+150 files in other folders)
