[workspace]
resolver = "2"
members = [
    "apps/univers-ark-developer/src-tauri",
    "apps/univers-container-daemon",
    "apps/univers-daemon-core",
    "apps/univers-machine-daemon",
    "crates/univers-ark-kernel",
    "crates/univers-infra-ssh",
    "crates/univers-infra-sqlite",
    "crates/univers-infra-systemd",
    "crates/univers-infra-tmux",
    "crates/univers-infra-workspace",
]
