[package]
name = "univers-daemon-core"
version = "0.1.0"
edition = "2021"
description = "Shared library for univers daemon agents (system info, agent monitoring, tmux management, installer framework)"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
sysinfo = "0.30"
async-trait = "0.1"
serde_yaml = "0.9"
