[package]
name = "univers-machine-daemon"
version = "0.1.0"
edition = "2021"
description = "Machine daemon for remote management: system info, agent monitoring, tmux services, software installation"

[dependencies]
univers-daemon-shared = { path = "../univers-daemon-core" }
univers-infra-sqlite = { path = "../../crates/univers-infra-sqlite" }
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.30"
