[package]
name = "univers-infra-ssh"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
russh = "0.57.1"
russh-sftp = "2.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time"] }
tokio-tungstenite = "0.26"
