[package]
name = "univers-ark-developer"
version = "0.1.0"
description = "Local desktop shell for Univers Ark developer targets"
authors = ["OpenAI Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
arboard = "3"
dirs = "5"
csv = "1"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["rt"] }
url = "2.5"
univers-ark-russh = { path = "crates/univers-ark-russh" }
