[package]
name = "univers-ark-developer"
version = "0.1.0"
description = "Local desktop shell for Univers Ark developer targets"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
csv = "1"
keyring = "3"
portable-pty = "0.8"
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["rt"] }
url = "2.5"
univers-ark-russh = { path = "crates/univers-ark-russh" }

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
arboard = "3"
