[package]
name = "univers-ark-developer"
version = "0.1.1"
description = "Local desktop shell for Univers Ark developer targets"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.1.1", features = [] }
tokio = { version = "1", features = ["rt"] }
url = "2.5"
univers-ark-russh = { path = "crates/univers-ark-russh" }

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
arboard = "3"
keyring = "3"
rusqlite = { version = "0.34", features = ["bundled"] }
tauri-plugin-global-shortcut = "2"
